--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.3",
+    "graphql": "^16.3.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.10"
   }
